--- a/Lab2/vue-project/package.json
+++ b/Lab2/vue-project/package.json
@@ -12,7 +12,8 @@
     "axios": "^1.7.7",
     "js-cookie": "^3.0.5",
     "vue": "^3.5.12",
-    "vue-router": "^4.4.5"
+    "vue-router": "^4.4.5",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
